tests/base/parser/bad/cast_to_non_address_2.scilla
scilla_version 0

library L

type MyTyp =
| Address of ByStr20 with end

contract T ()

transition F (param1 : ByStr20 with contract field f : Uint32, field g : Int32 end)
  x <-& param1 as MyTyp
end